--- a/action.yml
+++ b/action.yml
@@ -297,6 +297,7 @@ runs:
                     export KVER=${{ inputs.ksu-version }}
                 fi
                     curl -LSs "https://raw.githubusercontent.com/tiann/KernelSU/main/kernel/setup.sh" | bash -s "$KVER"
+                    sed -i '/config KSU/,/help/{s/default y/default m/}' drivers/kernelsu/Kconfig
             fi
             if grep -q "CONFIG_KPROBES=y" "arch/${{ inputs.arch }}/configs/${{ inputs.config }}" ; then
                 echo "CONFIG_KPROBES is enabled, skip patch."
